# BloggyRust

./: AGENTS.md  AMELIORATIONS.md  agent.md
.claude/: launch.json
agent/: api.md  architecture.md  database.md  getting-started.md  known-issues.md  structure.md  technologies.md
agents/: configuration.md  conventions.md  structure.md
blog/: .env.example  .gitignore  README.md  docker-compose.yml
blog/.claude/: launch.json
blog/backend/: Cargo.toml  Dockerfile
blog/backend/src/: config.rs  error.rs  main.rs
blog/backend/src/handlers/: article_handler.rs  auth_handler.rs  comment_handler.rs  mod.rs  tag_handler.rs
blog/backend/src/middleware/: auth.rs
blog/backend/src/models/: article.rs  comment.rs  mod.rs  tag.rs  user.rs
blog/backend/src/repositories/: article_repository.rs  comment_repository.rs  mod.rs  tag_repository.rs  user_repository.rs
blog/backend/src/routes/: mod.rs
blog/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
blog/frontend/src/: App.tsx  setupTests.ts
blog/frontend/src/api/: articles.ts  auth.ts  client.ts  comments.ts  tags.ts
blog/frontend/src/components/layout/: Footer.tsx  (+1 more)
blog/frontend/src/contexts/: AuthContext.tsx
blog/frontend/src/pages/: ArticlePage.tsx  HomePage.tsx  LoginPage.tsx
blog/frontend/src/types/: index.ts
blog/migrations/: 001_create_users.sql  002_create_articles.sql  003_create_tags.sql  004_create_comments.sql
docs/superpowers/plans/: 2026-03-26-tests-unitaires-ci.md
docs/superpowers/specs/: 2026-03-26-tests-unitaires-ci-design.md
(+8 files in other folders)
