[package]
name    = "blog-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blog-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum            = { version = "0.7", features = ["macros"] }
tower            = "0.4"
tower-http       = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio            = { version = "1", features = ["full"] }

# Database
sqlx             = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
    "json",
] }

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# Authentication
jsonwebtoken     = "9"
argon2           = "0.5"

# Utilities
uuid             = { version = "1", features = ["v4", "serde"] }
time             = { version = "0.3", features = ["serde"] }
dotenvy          = "0.15"
thiserror        = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
